--- a/roles/zookeeper/templates/zoo.cfg.j2
+++ b/roles/zookeeper/templates/zoo.cfg.j2
@@ -5,5 +5,5 @@ initLimit={{ zookeeper_initlimit }}
 syncLimit={{ zookeeper_synclimit }}
 
 {% for host in groups['zookeeper'] %}
-server.{{ ( groups['zookeeper'].index(host)) + 1 }}={{hostvars[host]['ansible_hostname'] }}:2888:3888
+server.{{ ( groups['zookeeper'].index(host)) + 1 }}={{ host }}:2888:3888
 {% endfor %}
