--- a/roles/hadoop_core/templates/core-site.xml.j2
+++ b/roles/hadoop_core/templates/core-site.xml.j2
@@ -3,6 +3,6 @@
 <configuration>
 <property>
 <name>fs.defaultFS</name>
-<value>hdfs://{{ hostvars[groups['namenode'][0]]['ansible_hostname'] }}:8020/</value>
+<value>hdfs://{{ groups['namenode'][0] }}:8020/</value>
 </property>
 </configuration>
