--- a/roles/hadoop/templates/core-site.xml.j2
+++ b/roles/hadoop/templates/core-site.xml.j2
@@ -3,6 +3,6 @@
 <configuration>
 <property>
 <name>fs.defaultFS</name>
-<value>hdfs://{{ groups['namenode'][0] }}:8020/</value>
+<value>hdfs://{{ namenode_hosts[0] }}:8020/</value>
 </property>
 </configuration>
