--- a/roles/hadoop/templates/mapred-site.xml.j2
+++ b/roles/hadoop/templates/mapred-site.xml.j2
@@ -7,10 +7,10 @@
 </property>
 <property>
 <name>mapreduce.jobhistory.address</name>
-<value>{{ groups['namenode'][0] }}:10020</value>
+<value>{{ namenode_hosts[0] }}:10020</value>
 </property>
 <property>
 <name>mapreduce.jobhistory.webapp.address</name>
-<value>{{ groups['namenode'][0] }}:19888</value>
+<value>{{ namenode_hosts[0] }}:19888</value>
 </property>
 </configuration>
