--- a/roles/hadoop/templates/yarn-site.xml.j2
+++ b/roles/hadoop/templates/yarn-site.xml.j2
@@ -7,15 +7,15 @@
 </property>
 <property>
 <name>yarn.resourcemanager.resource-tracker.address</name>
-<value>{{ groups['resourcemanager'][0] }}:8025</value>
+<value>{{ resourcemanager_host }}:8025</value>
 </property>
 <property>
 <name>yarn.resourcemanager.scheduler.address</name>
-<value>{{ groups['resourcemanager'][0] }}:8030</value>
+<value>{{ resourcemanager_host }}:8030</value>
 </property>
 <property>
 <name>yarn.resourcemanager.address</name>
-<value>{{ groups['resourcemanager'][0] }}:8050</value>
+<value>{{ resourcemanager_host }}:8050</value>
 </property>
 <property>
 <name>yarn.nodemanager.aux-services.mapreduce_shuffle.class</name>
