--- a/roles/hadoop/templates/core-site.xml.j2
+++ b/roles/hadoop/templates/core-site.xml.j2
@@ -4,5 +4,8 @@
 <property>
 <name>fs.defaultFS</name>
 <value>hdfs://{{ namenode_hosts[0] }}:8020/</value>
+<description>
+Where HDFS NameNode can be found on the network
+</description>
 </property>
 </configuration>
