--- a/roles/hadoop/templates/hdfs-site.xml.j2
+++ b/roles/hadoop/templates/hdfs-site.xml.j2
@@ -5,6 +5,11 @@
 <name>dfs.replication</name>
 <value>2</value>
 </property>
+<property> 
+<name>dfs.block.size</name>
+<value>16777216</value>
+<description>The default block size in bytes of data saved to HDFS</description>
+</property>
 <property>
 <name>dfs.namenode.name.dir</name>
 <value>file:{{ hadoop_namenode_dir }}</value>
