--- a/roles/hbase/templates/hbase-site.xml.j2
+++ b/roles/hbase/templates/hbase-site.xml.j2
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
 <configuration>
 <property>
 <name>hbase.rootdir</name>
@@ -13,9 +15,7 @@
 </property>
 <property>
 <name>hbase.zookeeper.quorum</name>
-<value>
-{{ zookeeper_hosts|join(',') }}
-</value>
+<value>{{ zookeeper_hosts|join(',') }}</value>
 </property>
 <property>
 <name>hbase.zookeeper.property.clientPort</name>
